fix: lh indicators are misaligned (ACC-110)

--- a/src/style/components/legal-hold-dot.less
+++ b/src/style/components/legal-hold-dot.less
@@ -19,6 +19,9 @@
 
 .legal-hold-dot-button {
   .button-reset-default;
+
+  display: flex;
+  align-items: center;
   padding: 8px;
 }
 
@@ -33,6 +36,7 @@
   border-radius: 50%;
 
   &--interactive {
+    margin-right: 8px;
     cursor: pointer;
   }
 
